pve-cluster (4.0-1) unstable; urgency=medium

  * updated for Debian Jessie

  * depend on glib >= 2.42

  * depend on corosync => 2.3.4

  * depend on libqb 0.17.1-1

 -- Proxmox Support Team <support@proxmox.com>  Mon, 23 Feb 2015 16:11:23 +0100

pve-cluster (3.0-17) unstable; urgency=low

  * add ability to update cfs locks

 -- Proxmox Support Team <support@proxmox.com>  Thu, 19 Feb 2015 11:56:06 +0100

pve-cluster (3.0-16) unstable; urgency=low

  * recompile, and include new package with debug information

 -- Proxmox Support Team <support@proxmox.com>  Mon, 09 Feb 2015 17:11:00 +0100

pve-cluster (3.0-15) unstable; urgency=low

  * datacenter.cfg: add new email_from option

 -- Proxmox Support Team <support@proxmox.com>  Thu, 04 Sep 2014 17:31:34 +0200

pve-cluster (3.0-14) unstable; urgency=low

  * datacenter.cfg: add new value for console setting (html5)

 -- Proxmox Support Team <support@proxmox.com>  Wed, 25 Jun 2014 06:22:58 +0200

pve-cluster (3.0-13) unstable; urgency=low

  * fix bug 204: use DERIVE instead of COUNTER

 -- Proxmox Support Team <support@proxmox.com>  Wed, 30 Apr 2014 07:19:50 +0200

pve-cluster (3.0-12) unstable; urgency=low

  * fix bug #489: debend on libfuse 2.9.2-4 from jessy

 -- Proxmox Support Team <support@proxmox.com>  Mon, 27 Jan 2014 11:49:27 +0100

pve-cluster (3.0-11) unstable; urgency=low

  * stop service 'pve-cluster' after stopping 'ceph'

 -- Proxmox Support Team <support@proxmox.com>  Mon, 13 Jan 2014 07:46:35 +0100

pve-cluster (3.0-10) unstable; urgency=low

  * start service 'pve-cluster' before starting 'ceph'

 -- Proxmox Support Team <support@proxmox.com>  Tue, 31 Dec 2013 06:35:29 +0100

pve-cluster (3.0-9) unstable; urgency=low

  * datacenter.cfg: add new console setting (applet/vv)

 -- Proxmox Support Team <support@proxmox.com>  Tue, 10 Dec 2013 06:18:56 +0100

pve-cluster (3.0-8) unstable; urgency=low

  * use warnings instead of global -w flag
