@@ -10,7 +10,7 @@ export DH_OPTIONS
 BUILDROOT := $(shell pwd)
 
 %:
-	dh $@
+	dh $@ --with=systemd
 
 override_dh_strip:
 	dh_strip --dbg-package=pve-cluster-dbg
@@ -20,6 +20,9 @@ override_dh_auto_configure:
 	./autogen.sh
 
 	./configure --prefix=/usr
+
+override_dh_systemd_start:
+	dh_systemd_start --restart-after-upgrade
 
 override_dh_auto_install:
 
